# fastAPI_ci_app

./: Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docker/server/: Dockerfile
docker/tests/: Dockerfile
src/homework/: exceptions.py  main.py  schemas.py
tests/: conftest.py  test_.py
