[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "2023-autumn-AB-python-HW6"
version = "0.1.0"
description = "HW6"
authors = ["author"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.2"
uvicorn = "0.23.2"
pydantic-settings = "2.0.3"


[tool.poetry.dev-dependencies]


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
pylint = "^3.0.2"
bandit = "^1.7.5"
pytest = "^7.4.2"
httpx = "^0.25.0"
isort = "^5.12.0"
mypy = "^1.6.1"

[build]
script = "poetry build"

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.flake8]
ban-todos = true

[tool.pytest.ini_options]
addopts = "--strict-markers -W error"
junit_family = "xunit2"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning"
]
pythonpath = [
    ".", "src"
]

[tool.isort]
line_length = 80
multi_line_output = 3
include_trailing_comma = true